// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brackets.js - flow-verify 1`] = `
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from '.';
import {fitsIn, oneLine} from '.';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from ".";
import { fitsIn, oneLine } from ".";

`;

exports[`brackets.js - flow-verify 2`] = `
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from '.';
import {fitsIn, oneLine} from '.';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from ".";
import {fitsIn, oneLine} from ".";

`;

exports[`comments.js - flow-verify 1`] = `
import { a //comment1
//comment2
//comment3
as b} from "";

import {
  a as //comment1
  //comment2
  //comment3
  b
} from "";

import {
  a as //comment2 //comment1
  //comment3
  b
} from "";

import {
  a as //comment3 //comment2 //comment1
  b
} from "";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from "./module";

import {
  ExecutionResult,
  DocumentNode,
  /* tslint:disable */
  SelectionSetNode,
  /* tslint:enable */
} from 'graphql';

import x, {
  // comment
  y
} from 'z';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  //comment1
  //comment2
  //comment3
  a as b
} from "";

import {
  //comment1
  //comment2
  //comment3
  a as b
} from "";

import {
  //comment2 //comment1
  //comment3
  a as b
} from "";

import {
  //comment3 //comment2 //comment1
  a as b
} from "";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from "./module";

import {
  ExecutionResult,
  DocumentNode,
  /* tslint:disable */
  SelectionSetNode
  /* tslint:enable */
} from "graphql";

import x, {
  // comment
  y
} from "z";

`;

exports[`comments.js - flow-verify 2`] = `
import { a //comment1
//comment2
//comment3
as b} from "";

import {
  a as //comment1
  //comment2
  //comment3
  b
} from "";

import {
  a as //comment2 //comment1
  //comment3
  b
} from "";

import {
  a as //comment3 //comment2 //comment1
  b
} from "";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from "./module";

import {
  ExecutionResult,
  DocumentNode,
  /* tslint:disable */
  SelectionSetNode,
  /* tslint:enable */
} from 'graphql';

import x, {
  // comment
  y
} from 'z';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  //comment1
  //comment2
  //comment3
  a as b
} from "";

import {
  //comment1
  //comment2
  //comment3
  a as b
} from "";

import {
  //comment2 //comment1
  //comment3
  a as b
} from "";

import {
  //comment3 //comment2 //comment1
  a as b
} from "";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from "./module";

import {
  ExecutionResult,
  DocumentNode,
  /* tslint:disable */
  SelectionSetNode
  /* tslint:enable */
} from "graphql";

import x, {
  // comment
  y
} from "z";

`;

exports[`empty-import.js - flow-verify 1`] = `
import { } from '@types/googlemaps';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {} from "@types/googlemaps";

`;

exports[`empty-import.js - flow-verify 2`] = `
import { } from '@types/googlemaps';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {} from "@types/googlemaps";

`;

exports[`inline.js - flow-verify 1`] = `
import somethingSuperLongsomethingSuperLong from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {somethingSuperLongsomethingSuperLong} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import a, {somethingSuperLongsomethingSuperLong} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {a, somethingSuperLongsomethingSuperLong} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import somethingSuperLongsomethingSuperLong from "somethingSuperLongsomethingSuperLongsomethingSuperLong";
import { somethingSuperLongsomethingSuperLong } from "somethingSuperLongsomethingSuperLongsomethingSuperLong";
import a, {
  somethingSuperLongsomethingSuperLong
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong";
import {
  a,
  somethingSuperLongsomethingSuperLong
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong";

`;

exports[`inline.js - flow-verify 2`] = `
import somethingSuperLongsomethingSuperLong from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {somethingSuperLongsomethingSuperLong} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import a, {somethingSuperLongsomethingSuperLong} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
import {a, somethingSuperLongsomethingSuperLong} from 'somethingSuperLongsomethingSuperLongsomethingSuperLong'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import somethingSuperLongsomethingSuperLong from "somethingSuperLongsomethingSuperLongsomethingSuperLong";
import {somethingSuperLongsomethingSuperLong} from "somethingSuperLongsomethingSuperLongsomethingSuperLong";
import a, {
  somethingSuperLongsomethingSuperLong
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong";
import {
  a,
  somethingSuperLongsomethingSuperLong
} from "somethingSuperLongsomethingSuperLongsomethingSuperLong";

`;

exports[`long-line.js - flow-verify 1`] = `
import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName from "../../../../utils/someCoolUtilWithARatherLongName";

`;

exports[`long-line.js - flow-verify 2`] = `
import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName from "../../../../utils/someCoolUtilWithARatherLongName";

`;

exports[`multiple_standalones.js - flow-verify 1`] = `
import a, * as b from 'a';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from "a";

`;

exports[`multiple_standalones.js - flow-verify 2`] = `
import a, * as b from 'a';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from "a";

`;
